Do a lot of stuff
Co-authored-by: Will Greenberg <greenberg.will@gmail.com>

--- a/Registrar/Views/Students/Create.cshtml
+++ b/Registrar/Views/Students/Create.cshtml
@@ -17,6 +17,10 @@
   @Html.Label("Select Course")
   @Html.DropDownList("CourseId")
 
+  @Html.Label("Select Department")
+  @Html.DropDownList("DepartmentId")
+
+
   <input type="submit" value="Add new Student" class="btn btn-primary">
 }
 <p>@Html.ActionLink("Show all Students", "Index")</p>
