--- a/Registrar/Views/Courses/Create.cshtml
+++ b/Registrar/Views/Courses/Create.cshtml
@@ -11,6 +11,10 @@
   @Html.TextBoxFor(model => model.Name, new {@required = "required"})
   @Html.LabelFor(model => model.Number)
   @Html.TextBoxFor(model => model.Number, new {@required = "required"})
+  
+  @Html.Label("Select Department")
+  @Html.DropDownList("DepartmentId")
+
   <input type="submit" value="Add new Course" />
 }
 <p>@Html.ActionLink("Show all Courses", "Index")</p>
