--- a/Registrar/Views/Home/Index.cshtml
+++ b/Registrar/Views/Home/Index.cshtml
@@ -8,3 +8,4 @@
 
 <p>@Html.ActionLink("See all students", "Index", "Students")</p>
 <p>@Html.ActionLink("See all courses", "Index", "Courses")</p>
+<p>@Html.ActionLink("See all departments", "Index", "Departments")</p>
